<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Dialog</class>
 <widget class="QDialog" name="Dialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <property name="styleSheet">
   <string notr="true">	color: rgb(255, 255, 255);
	background-color: qlineargradient(spread:pad, x1:1, y1:1, x2:1, y2:1, stop:0 		    rgba(43, 48, 59, 255), stop:1 rgba(0, 0, 127, 255));</string>
  </property>
  <widget class="QWidget" name="verticalLayoutWidget">
   <property name="geometry">
    <rect>
     <x>40</x>
     <y>110</y>
     <width>327</width>
     <height>80</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QPushButton" name="newCourseButton">
      <property name="text">
       <string>Create New Course</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="newTemplateCourseButton">
      <property name="text">
       <string>Create New Course using previous Template</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
